--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.1",
+    "mobx": "^6.12.0",
+    "mobx-react-lite": "^4.0.5",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
