--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.5",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
+    "mobx-utils": "^6.0.8",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
