--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fullcalendar/core": "^6.1.10",
+    "@fullcalendar/daygrid": "^6.1.10",
+    "@fullcalendar/react": "^6.1.10",
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.1",
+    "@mui/x-data-grid": "^6.19.2",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "mobx": "^6.12.0",
