--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.1",
     "@mui/x-data-grid": "^6.19.2",
+    "@mui/x-date-pickers": "^6.19.4",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
+    "dayjs": "^1.11.10",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
     "mobx-utils": "^6.0.8",
