fixed styles header, cards, sidebar

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "paths": {
+      "@/public": ["./public"],
+      "@/src": ["./src"]
+    },
     "plugins": [
       {
         "name": "next"
